
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#3350] Improvements to bugfix for PHP bug 53632
- [#4054] Improve select binding to be able to use Resource fields via placeholders
- [#142] Add modResource.setTVValue API method
- [#4021] Add system setting to allow setting of a custom favicon for the manager
- [#3589] Fix issue with Static Resource paths when using custom filemanager_path
- [#4040] Fix issue where Users were always created as active in mgr UI
- [#4043] Enable drag/drop of users and groups in User Group tree
- [#4052] Fix issues with element property import and invalid characters causing freezing in UI
- [#4042] Fix issue in phpThumb base class preventing far property from working
- [#4049] Add resource_tree_node_tooltip for controlling field in Resource Tree tooltip
- [#3511], [#2964], [#3601] Fix issues regarding form customization and Templates by removing ajax loading of TVs in Resource panels
- Consolidate JS for derivative Resource panels to allow to inherit from main Resource panel
- Add context param to modx.getParentIds
- [#3754] Ensure Resources can not have their parent set as one of their descendants
- Add context param to modX.getChildIds
- [#3612] Improve CDATA filter to not add spaces at beginning or end
- [#3764] Add delete to actionbar on Resource edit panel
- [#3585] Add description field to modUserGroup
- [#3020] Improve trees to expand node on click if no href target is set for tree node
- [#4006] Show children count rather than IDs on categories in element tree to lessen id ambiguity
- Fix issue where Quick Create was not respecting unchecked setting checkboxes
- [#3673] Add "Save and Close" button to quick update windows
- [#3970] Ensure extension is lowercased before checking for allowed status when uploading files
- [#3920] Ensure modPHPMailer resets replyTo and custom header fields