@@ -148,6 +148,7 @@ $_lang['status'] = 'Status';
 $_lang['symlink'] = 'Symlink';
 $_lang['symlink_create'] = 'Create Symlink';
 $_lang['symlink_create_here'] = 'Create a Symlink Here';
+$_lang['symlink_help'] = 'The address of the object you wish to reference with this SymLink. If you want to point to an existing MODX Resource, enter the ID here.';
 $_lang['symlink_message'] = 'A symlink is a symbolic link to another resource in your site which is forwarded to without changing the URL.';
 $_lang['symlink_new'] = 'New Symlink';
 $_lang['template_variables'] = 'Template Variables';
@@ -155,6 +156,6 @@ $_lang['untitled_resource'] = 'Untitled Resource';
 $_lang['weblink'] = 'Weblink';
 $_lang['weblink_create'] = 'Create Weblink';
 $_lang['weblink_create_here'] = 'Create a Weblink Here';
-$_lang['weblink_help'] = 'The address of the object you wish to reference with this weblink.';
+$_lang['weblink_help'] = 'The address of the object you wish to reference with this weblink. If you want to point to an existing MODX Resource, enter the ID here.';
 $_lang['weblink_message'] = 'A weblink is a reference to an object on the internet. This could be a document within MODx, a page on another site or an image or other file on the internet.<p>';
 $_lang['weblink_new'] = 'New Weblink';
